@@ -2,6 +2,12 @@
 
 	SUBC BUILD STATUS
 
+	FreeBSD/x86-64 10.1-RELEASE, clang 3.4.1, SubC 20160216
+		triple test	passed
+		ptest		passed
+		systest		passed
+		libtest		passed
+		signal()	works
 
 	FreeBSD/386 8.2-RELEASE, gcc 4.2.1, SubC 20140525
 		triple test	passed
@@ -11,13 +17,6 @@
 		signal()	works
 
 	FreeBSD/armv6 10.0-RC5, clang 3.3, SubC 20140525
-		triple test	passed
-		ptest		passed
-		systest		passed
-		libtest		passed
-		signal()	works
-
-	FreeBSD/x86-64 10.1-RELEASE, clang 3.4.1, SubC 20141207
 		triple test	passed
 		ptest		passed
 		systest		passed
